--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ section:first-of-type {
 }
 
 section:nth-of-type(2) {
-  background-image: url('https://images.unsplash.com/photo-1682687220566-5599dbbebf11?q=80&w=1975&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+  background-image: url('https://images.pexels.com/photos/7535456/pexels-photo-7535456.jpeg?auto=compress&cs=tinysrgb&w=2266&h=3393&dpr=1');
 }
 
 section:last-of-type {
