--- a/src/css/footer.module.css
+++ b/src/css/footer.module.css
@@ -1,9 +1,18 @@
 .footerContainer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: lightgray;
-    padding: 20px;
+    padding: 10px;
+}
+
+.contentContainer {
+    display: grid;
+    place-items: center;
+    text-align: center;
 }
 
 .socialIcons {
@@ -17,6 +26,7 @@
 }
 
 .contentContainer p {
+    width: 100%;
     margin: 0;
     color: black !important;
 }
