--- a/src/css/home.module.css
+++ b/src/css/home.module.css
@@ -27,6 +27,7 @@
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     transition: background-color 0.3s ease;
+    cursor: pointer;
 }
 
 .circulo.active {
