--- a/src/css/home.module.css
+++ b/src/css/home.module.css
@@ -1,7 +1,8 @@
 .titulo {
-    margin: auto;
+    display: grid;
+    place-items: center;
     color: rgb(255, 255, 255);
-    font-size: 10rem;
+    font-size: 8rem;
     text-shadow: 5px 5px 5px rgba(0, 0, 0, 1);
     text-align: center;
 }
