--- a/src/css/home.module.css
+++ b/src/css/home.module.css
@@ -1,4 +1,5 @@
 .titulo {
+    height: 30vh;
     display: grid;
     place-items: center;
 }
@@ -6,7 +7,7 @@
 .titulo h1{
     color: rgb(255, 255, 255);
     font-size: 6rem;
-    text-shadow: 5px 5px 5px rgba(0, 0, 0, 1);
+    text-shadow: 0 5px 5px rgba(0, 0, 0, 1);
     text-align: center;
 }
 
