--- a/src/css/mapa.module.css
+++ b/src/css/mapa.module.css
@@ -1,29 +1,19 @@
 .fondoMapa{
     background-image: url('https://images.pexels.com/photos/6412837/pexels-photo-6412837.jpeg?auto=compress&cs=tinysrgb&w=3839&h=5759&dpr=1');
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    place-items: center;
 }
 
 .contenedorTitulo{
     display: grid;
     place-items: center;
     text-align: center;
-    width: 100vw;
     text-shadow: 5px 5px 5px rgba(0, 0, 0, 1);
 }
 
 .titulo{
     color: aliceblue;
-    margin-top: -3rem;
-    margin-bottom: 1rem;
-    font-size: 6rem;
-}
-
-.mapear{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    font-size: 5rem;
 }
 
 .botonMapear{
@@ -32,16 +22,6 @@
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-}
-
-.leaflet-routing-container {
-    background-color: red !important;
-    color: white;
-}
-
-.leaflet-routing-alt {
-    background-color: red !important;
-    color: white;
 }
 
 .botonMapa{
@@ -68,8 +48,6 @@
 @media screen and (max-width: 430px){
     .titulo{
         font-size: 3rem;
-        margin-top: -1rem;
-        margin-bottom: 1rem;
     }
 }
 
