--- a/src/css/navbar.module.css
+++ b/src/css/navbar.module.css
@@ -9,9 +9,9 @@
     align-items: center;
     justify-content: space-between;
     padding: 0 1rem;
-    background: rgba(0, 0, 0, 0.25);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(12.5px) saturate(100%);
+	background-color: rgba(0, 0, 0, 0.5);
+    -webkit-backdrop-filter: blur(12.5px);
     border-radius: 0 0 10px 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
     z-index: 10;
@@ -69,9 +69,9 @@
     .showMenu {
         display: flex;
         flex-direction: column;
-        background: rgba(0, 0, 0, 0.25);
-        backdrop-filter: blur(5px);
-        -webkit-backdrop-filter: blur(5px);
+        backdrop-filter: blur(12.5px) saturate(100%);
+		background-color: rgba(0, 0, 0, 0.5);
+        -webkit-backdrop-filter: blur(12.5px);
         border-radius: 0 0 10px 10px;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
         position: absolute;
